# UnrealMotionGraphicsMCP

./: .Doxyfile  .gitignore  CONTRIBUTING.md  Gemini.json  Gemini.md  Gemini_CreateAnimation.py  Gemini_LiteRM_Integration_Plan.md  Gemini_README_Fix.md  Gemini_UmgMcpLiteRtLmAiProvider_0b73034.cpp  Gemini_UmgMcpLiteRtLmAiProvider_0b73034_utf8.cpp  Gemini_export_binary.py  Gemini_history_user_inputs.txt  Gemini_slot_fix.md  LICENSE  README-website.md  Readme.md  Readme_zh.md  UmgMcp.uplugin  UmgMcpConfig.json  architecture.html  check.py  class.py  commercial.html  contact.html  export_fab.bat  export_fab.py  fab_export.json  features.html  gemini.md  getting-started.html  index.html  index_zh.html  install_to_engine.bat  mcp-tools.html  open-source.html  roadmap.html  workflow.html
Resources/Python/: .gitignore  CONTRIBUTING.md  Gemini_MCP_Driver.py  Gemini_Prompt_Manager.py  Gemini_TestUMGAnimation.py  Gemini_Test_NewAPI.py  Gemini_Test_StatefulBlueprint_Draft.py  Gemini_debug_wrapper.py  Gemini_design_cf_lobby_auto.py  Gemini_old_server.py  Gemini_test_basic_operations.py  MockUnrealEngine.py  README_advanced.md  UMGAttention.py  UMGEditor.py  UMGFileTransformation.py  UMGGet.py  UMGSequencer.py  UMGSet.py  UmgMcpServer.py  UmgMcpSkills.py  UmgSequencerServer.py  antigravity_wrapper.py  debug_output.txt  debug_wrapper.py  design_cf_lobby.py  mcp_config.py  pyproject.toml  readme.md  sc2_ui_mcp_commands.json  test_connection.py  test_html_interface.py  test_login_ui.py  test_protocol.py  test_sequencer.py  test_umg_mcp.py  unreal_mcp_server_advanced.py  verify_actions.py
(+329 files in other folders)
